// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`courseABC.resolver @Mutation saveCourseProgress should return course history and student name 1`] = `
Object {
  "data": Object {
    "saveCourseProgress": Object {
      "history": Array [
        Object {
          "alphabet": Array [
            Object {
              "letter": "A",
              "value": 0,
            },
            Object {
              "letter": "B",
              "value": 0,
            },
            Object {
              "letter": "C",
              "value": 0,
            },
          ],
          "date": "today",
        },
        Object {
          "alphabet": Array [
            Object {
              "letter": "A",
              "value": 0,
            },
            Object {
              "letter": "B",
              "value": 0,
            },
            Object {
              "letter": "C",
              "value": 0,
            },
          ],
          "date": "tomorrow",
        },
        Object {
          "alphabet": Array [
            Object {
              "letter": "A",
              "value": 1,
            },
            Object {
              "letter": "B",
              "value": 1,
            },
            Object {
              "letter": "C",
              "value": 1,
            },
          ],
          "date": "today is the date",
        },
      ],
      "studentName": "Bob",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`courseABC.resolver @Query getStudentCourseABC should return course history and student name 1`] = `
Object {
  "data": Object {
    "getStudentCourseABC": Object {
      "history": Array [
        Object {
          "alphabet": Array [
            Object {
              "letter": "A",
              "value": 0,
            },
            Object {
              "letter": "B",
              "value": 0,
            },
            Object {
              "letter": "C",
              "value": 0,
            },
          ],
          "date": "today",
        },
        Object {
          "alphabet": Array [
            Object {
              "letter": "A",
              "value": 0,
            },
            Object {
              "letter": "B",
              "value": 0,
            },
            Object {
              "letter": "C",
              "value": 0,
            },
          ],
          "date": "tomorrow",
        },
      ],
      "studentName": "Bob",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
